--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="front">
                     <div id="f1" class="front-content">
 
-                        <img src="./image/01.pdf" alt="">
+                        <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
                     </div>
                 </div>
                 <div class="back">
@@ -99,13 +99,13 @@
                 <div class="front">
                     <div id="f2" class="front-content">
                         <!-- <h1>Front 2</h1> -->
-                        <img src="./image/logan-weaver-lgnwvr-8BNT5G4V5fI-unsplash.jpg" alt="">
+                        <img src="./image/logan-weaver-lgnwvr-8BNT5G4V5fI-unsplash.jpeg" alt="">
                     </div>
                 </div>
                 <div class="back">
                     <div id="b2" class="back-content">
                         <!-- <h1>Back 2</h1> -->
-                        <img src="./image/ludovica-dri-Bc_y35IwUHw-unsplash.jpg" alt="">
+                        <img src="./image/ludovica-dri-Bc_y35IwUHw-unsplash.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="back">
                     <div id="b3" class="back-content">
                         <!-- <h1>Back 3</h1> -->
-                        <img src="./image/logan-weaver-lgnwvr-8BNT5G4V5fI-unsplash.jpg" alt="">
+                        <img src="./image/mattias-diesel-3M2cqBRQmjA-unsplash.jpg" alt="">
                     </div>
                 </div>
             </div>
