--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- Font awesome -->
 
+    <!-- boostrap---link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- boostrap---link -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
@@ -18,77 +27,75 @@
 </head>
 
 <body>
-
-    <div class="main-wrapper">
-        <nav class="navbar">
-            <div class="brand-and-icon">
-                <a href="index.html" class="navbar-brand"></a>
-                <button type="button" class="navbar-toggler">
-                    <i class="fas fa-bars"></i>
+    <section id="nav-section">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
 
-            <div class="navbar-collapse">
-                <ul class="navbar-nav">
+                            <a class="nav-link " onclick="openNav()" aria-current="page" href="#"><i
+                                    class="fa-solid fa-list"></i>Contents</a>
 
-                    <li>
-                        <i class="fa-solid fa-list"></i>
+                            <div id="mySidenav" class="sidenav">
+                                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-                        <a onclick="openNav()" href="#">Contents</a>
+                                <a href="#">HISTORY
+                                    ..................................................................6</a>
+                                <a href="#">SEASIDE STORIES...................................................13</a>
+                                <a href="#">FASHION ROMANCE...............................................20</a>
+                                <a href="#">INTO THE WORLD....................................................30</a>
+                                <a href="#">CULINARY ART........................................................36</a>
+                                <a href="#">THE AUTHENTIC SOUTH........................................44</a>
+                                <a
+                                    href="#">GOLf.........................................................................52</a>
+                                <a
+                                    href="#">FUN..........................................................................58</a>
+                                <a href="#">WELLNESS..............................................................64</a>
+                                <a
+                                    href="#">DISCOVER...............................................................70</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-solid fa-magnifying-glass"></i>Search</a>
+                        </li>
 
-                        <div id="mySidenav" class="sidenav">
-                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
-                            <a href="#">HISTORY
-                                ..................................................................6</a>
-                            <a href="#">SEASIDE STORIES...................................................13</a>
-                            <a href="#">FASHION ROMANCE...............................................20</a>
-                            <a href="#">INTO THE WORLD....................................................30</a>
-                            <a href="#">CULINARY ART........................................................36</a>
-                            <a href="#">THE AUTHENTIC SOUTH........................................44</a>
-                            <a
-                                href="#">GOLf.........................................................................52</a>
-                            <a
-                                href="#">FUN..........................................................................58</a>
-                            <a href="#">WELLNESS..............................................................64</a>
-                            <a href="#">DISCOVER...............................................................70</a>
+                        <li class="nav-item">
+                            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="#"> <i
+                                    class="fa-solid fa-table-cells"></i>Overview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-solid fa-download"></i>Download as PDF</a>
 
 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-solid fa-print"></i>Print</a>
 
 
-                        </div>
-                    </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-solid fa-share-nodes"></i>Share</a>
 
-                    <li>
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <a href="#">Search</a>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-table-cells"></i>
-                        <a href="#">Overview</a>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-download"></i>
-                        <a href="#">Download as PDF</a>
-                    </li>
 
-                    <li>
-                        <i class="fa-solid fa-print"></i>
-                        <a href="#">Print</a>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-share-nodes"></i>
-                        <a href="#">Share </a>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-accessible-icon"></i>
-                        <a href="#">Accessibility </a>
-                    </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fa-brands fa-accessible-icon"></i>Accessibility </a>
+                        </li>
 
-                </ul>
+
+
+                    </ul>
+                </div>
             </div>
         </nav>
-    </div>
+    </section>
 
 
 
@@ -148,18 +155,88 @@
 
     </section>
 
-    <script>
-        // Trigger click event on the next button to show page 2 by default
-        document.addEventListener("DOMContentLoaded", function () {
-            var nextBtn = document.getElementById("next-btn");
-            nextBtn.click();
-        });
-    </script>
 
 
 
 
 
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog  modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Overview</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="overview-main">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+
+                            </a>
+                        </div>
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-2">
+                            <a href="#">
+                                <div class="card">
+                                    <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
+                                    <span>1</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -171,16 +248,15 @@
     <script src="./js/nav.js"></script>
     <script src="./js/script.js"></script>
 
-
     <script>
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "450px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
+        // Trigger click event on the next button to show page 2 by default
+        document.addEventListener("DOMContentLoaded", function () {
+            var nextBtn = document.getElementById("next-btn");
+            nextBtn.click();
+        });
     </script>
+
+
 </body>
 
 </html>
