--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa-brands fa-accessible-icon"></i>Accessibility </a>
                         </li>
-
-
-
                     </ul>
                 </div>
             </div>
@@ -101,63 +98,39 @@
 
 
 
-    <section id="book-section">
-        <!-- Previous Button -->
-        <button id="prev-btn">
-            <!-- <i class="fas fa-arrow-circle-left"></i> -->
-            <i class="fa-solid fa-chevron-left fa-beat"></i>
-        </button>
 
-        <!-- Book -->
-        <div id="book" class="book">
-            <!-- Paper 1 -->
-            <div id="p1" class="paper">
-                <div class="front">
-                    <div id="f1" class="front-content">
-                        <img src="./image/ashni-Wh9ZC4727e4-unsplash.jpeg" alt="">
-                    </div>
-                </div>
-                <div class="back">
-                    <div id="b1" class="back-content">
-                        <img src="./image/jon-tyson-H1flXzFuXgo-unsplash.jpg" alt="">
-                    </div>
-                </div>
+    <div class="containera" id="containera">
+        <div class="book-content">
+
+            <div class="book">
+                <div class="face-front" id="portada"></div>
+                <div class="face-back" id="trsf"></div>
             </div>
-            <!-- Paper 2 -->
-            <div id="p2" class="paper">
-                <div class="front">
-                    <div id="f2" class="front-content">
-                        <img src="./image/logan-weaver-lgnwvr-8BNT5G4V5fI-unsplash.jpeg" alt="">
-                    </div>
-                </div>
-                <div class="back">
-                    <div id="b2" class="back-content">
-                        <img src="./image/ludovica-dri-Bc_y35IwUHw-unsplash.jpeg" alt="">
-                    </div>
-                </div>
+
+            <div class="book">
+                <div class="face-front" id="threethp"></div>
+
+                <div class="face-back" id="fourp"></div>
             </div>
-            <!-- Paper 3 -->
-            <div id="p3" class="paper">
-                <div class="front">
-                    <div id="f3" class="front-content">
-                        <img src="./image/mattias-diesel-3M2cqBRQmjA-unsplash.jpg" alt="">
-                    </div>
-                </div>
-                <div class="back">
-                    <div id="b3" class="back-content">
-                        <img src="./image/mattias-diesel-3M2cqBRQmjA-unsplash.jpg" alt="">
-                    </div>
+
+            <div class="book">
+                <div class="face-front" id="fivep"> </div>
+                <div class="face-back" id="sixp"></div>
+            </div>
+
+            <div class="book">
+                <div class="face-front" id="sevenp"></div>
+                <div class="face-back" id="portada-back">
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Next Button -->
-        <button id="next-btn">
-            <!-- <i class="fas fa-arrow-circle-right"></i> -->
-            <i class="fa-solid fa-chevron-right fa-beat"></i>
-        </button>
 
-    </section>
+
+
+
+
 
 
 
@@ -286,20 +259,25 @@
                 </div>
                 <div class="modal-body">
                     <div class="share-social">
-                        <a href="#"> <img src="./image/download.png" alt=""></a>
-                        <a href="#"><img src="./image/twitter-logo-twitter-icon-transparent-free-free-png.webp"
-                                alt=""></a>
+                        <a href="#"> <i class="fa-brands fa-square-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
 
-                        <a href="#"><img src="./image/Popular_Social_Media-22-512.webp" alt=""> </a>
-                        <a href="#"><img src="./image/pinterest-logo-pinterest-transparent-free-png.webp" alt=""> </a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i> </a>
+                        <a href="#"><i class="fa-brands fa-square-pinterest" style="color: #ff1414;"></i> </a>
 
-                        <a href="#"><img src="./image/download (1).png" alt=""> </a>
+                        <a href="#"><i class="fa-brands fa-square-tumblr"></i> </a>
 
-                        <a href="#"><img src="./image/skype-logo-skype-icon-transparent-free-png.webp" alt=""> </a>
+                        <a href="#"> <i class="fa-brands fa-skype"></i></a>
 
 
-                        <a href="#"><img src="./image/download.jpg" alt=""> </a>
+                        <a href="#"><i class="fa-brands fa-square-whatsapp" style="color: #1dc320;"></i> </a>
                     </div>
+
+                    <form action="#" class="share-form">
+                        <input type="text" value="https://www.paperturn-view.com/?pid=MTQ149765&v=2.6&p=81">
+                        <label for="">Copy</label>
+
+                    </form>
                 </div>
 
             </div>
